# leafy_factory

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  requirements.txt
backend/app/: curl_examples.txt  database.py  main.py  models.py  pyproject.toml  routes.py  sql_data_schema.sql  work_orders.txt
backend/app/models/: job_task.py  lambda_requests.py  machines.py  work_orders.py
backend/app/mqtt/: mqtt.py
backend/app/routes/: change_stream_listener.py  factory.py  jobs.py  lambda_routes.py  machine_simulator.py  machines.py  products.py  stream_jobs.py  stream_workorders.py  work_orders.py
backend/kafka_2.13-3.9.0/config/: connect-distributed.properties  connect-standalone.properties  mariadb-connector.json  mariadb-connector.properties  mongodb-sink.json  mongodb-sink.properties  mongodb-sink1.json
backend/kafka_2.13-3.9.0/logs/: connect.log.2025-01-03-10  connect.log.2025-01-03-11  connect.log.2025-01-03-12  connect.log.2025-01-03-13  connect.log.2025-01-03-14  connect.log.2025-01-03-15  connect.log.2025-01-03-16  connect.log.2025-01-03-17  connect.log.2025-01-03-18  connect.log.2025-01-03-19  (+270 more)
backend/utils/: kafka-bridge.json  mongodb-sink-cloud.json  mongodb-sink-mqtt.json  posgres-connector.json
frontend/: .gitignore  Dockerfile  README.md  config-overrides.js  package-lock.json  package.json
frontend/src/: App.js  App.jsx  index.css  index.js  next.config.mjs  package-lock.json  package.json  reportWebVitals.js  styles.css
mosquitto/: Dockerfile  docker-compose.yml
mosquitto/config/: mosquitto.conf
(+422 files in other folders)
