[tool.poetry]
name = "app"
version = "0.1.0"
description = "Includes the dependencies for the leafy_factory backend demo"
authors = ["Giovanni Rodriguez <gio.rodriguez@mongodb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
load-dotenv = "^0.1.0"
pydantic = "^2.10.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
